--- a/src/app/make-quiz/make-quiz.component.scss
+++ b/src/app/make-quiz/make-quiz.component.scss
@@ -24,6 +24,14 @@ form {
   color: white;
 }
 
+mat-form-field {
+  background-color: white;
+}
+
+mat-radio-group {
+  background-color: white;
+}
+
 .example-list {
   width: 500px;
   max-width: 100%;
